run-in-eks-terraform/cluster/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: hello
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: ingress
spec:
 rules:
 - http:
     paths:
     - path: /world
       backend:
         serviceName: world
         servicePort: 5000
     - path: /nemesis
       backend:
         serviceName: nemesis
         servicePort: 5000
